--- a/app/src/main/res/layout/act_blog_edit.xml
+++ b/app/src/main/res/layout/act_blog_edit.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActBlogAdd">
+    tools:context=".ActBlogAdd"
+    android:id="@+id/mainLayout">
 
     <ImageButton
         android:id="@+id/btnBack"
