--- a/app/src/main/res/layout/act_history.xml
+++ b/app/src/main/res/layout/act_history.xml
@@ -46,7 +46,7 @@
         tools:listitem="@layout/list_history" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/coverListView"
+        android:id="@+id/cover"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/white"
@@ -82,6 +82,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lblEmoji" />
+
+        <ProgressBar
+            android:id="@+id/loading"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintEnd_toEndOf="@+id/lblMessage"
+            app:layout_constraintStart_toStartOf="@+id/lblMessage"
+            app:layout_constraintTop_toBottomOf="@+id/lblMessage" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
