--- a/app/src/main/res/layout/dlg_purchase_loading.xml
+++ b/app/src/main/res/layout/dlg_purchase_loading.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/white"
@@ -14,14 +13,14 @@
         android:paddingEnd="@dimen/mx">
 
         <TextView
-            android:id="@+id/lblDlgInfoTitle"
+            android:id="@+id/title"
             style="@style/Text_Regular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/mx"
+            android:layout_marginTop="24dp"
             android:fontFamily="@font/spoof_bold"
             android:gravity="center"
-            android:text="@string/dlg_title_my_qr"
+            android:text="@string/dlg_title_purchase_loading"
             android:textColor="@color/neutral_900"
             android:textSize="@dimen/text_lg"
             app:layout_constraintEnd_toEndOf="parent"
@@ -29,60 +28,43 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/lblDlgInfoBody"
+            android:id="@+id/body"
             style="@style/Text_Regular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/elmnt_gap_md"
             android:gravity="center"
-            android:text="@string/dlg_body_my_qr"
+            android:text="@string/dlg_body_purchase_loading"
             android:textColor="@color/neutral_900"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/qrCode"
+            app:layout_constraintTop_toBottomOf="@id/title"
             app:lineHeight="20dp" />
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/qrCode"
+        <TextView
+            android:id="@+id/count"
+            style="@style/Text_Regular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="@string/placeholder"
+            android:textColor="@color/neutral_900"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/body"
+            app:lineHeight="20dp" />
+
+        <ProgressBar
+            android:id="@+id/loading"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_marginTop="16dp"
-            android:backgroundTint="@color/white"
-            android:padding="8dp"
-            app:cardCornerRadius="@dimen/radius_md"
-            app:cardElevation="0dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lblDlgInfoTitle"
-            app:strokeColor="@color/neutral_300"
-            app:strokeWidth="1dp">
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/imgQrCode"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:src="@mipmap/ic_launcher" />
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <Button
-            android:id="@+id/btnDlgInfoPrimary"
-            style="@style/Btn_Primary"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="1dp"
-            android:layout_marginTop="14dp"
-            android:layout_marginEnd="1dp"
-            android:layout_marginBottom="20dp"
-            android:insetTop="5dp"
-            android:insetBottom="5dp"
-            android:text="@string/btn_great"
+            android:layout_marginBottom="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/lblDlgInfoBody"
-            tools:ignore="VisualLintButtonSize" />
-
+            app:layout_constraintEnd_toEndOf="@+id/body"
+            app:layout_constraintStart_toStartOf="@+id/body"
+            app:layout_constraintTop_toBottomOf="@+id/count" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.cardview.widget.CardView>
