--- a/app/src/main/res/layout/frg_main_blog.xml
+++ b/app/src/main/res/layout/frg_main_blog.xml
@@ -125,7 +125,7 @@
         tools:listitem="@layout/list_blog" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/coverListView"
+        android:id="@+id/cover"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/white"
@@ -161,6 +161,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lblEmoji" />
+
+        <ProgressBar
+            android:id="@+id/loading"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintEnd_toEndOf="@+id/lblMessage"
+            app:layout_constraintStart_toStartOf="@+id/lblMessage"
+            app:layout_constraintTop_toBottomOf="@+id/lblMessage" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
