--- a/app/src/main/res/layout/frg_main_user_accounts.xml
+++ b/app/src/main/res/layout/frg_main_user_accounts.xml
@@ -63,7 +63,7 @@
         tools:listitem="@layout/list_users"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/coverListView"
+        android:id="@+id/cover"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/white"
@@ -80,7 +80,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/emo_empty"
+            android:text="@string/emo_hiding"
             android:textSize="@dimen/text_emoji_lg"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -99,6 +99,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lblEmoji" />
+
+        <ProgressBar
+            android:id="@+id/loading"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintEnd_toEndOf="@+id/lblMessage"
+            app:layout_constraintStart_toStartOf="@+id/lblMessage"
+            app:layout_constraintTop_toBottomOf="@+id/lblMessage" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
