--- a/app/src/main/res/navigation/nav_forgot_password.xml
+++ b/app/src/main/res/navigation/nav_forgot_password.xml
@@ -9,7 +9,11 @@
         android:id="@+id/frgForgotPassword"
         android:name="com.hygeia.fragments.FrgForgotPassword"
         android:label="frg_forgot_password"
-        tools:layout="@layout/frg_forgot_password" />
+        tools:layout="@layout/frg_forgot_password">
+        <action
+            android:id="@+id/action_frgForgotPassword_to_frgResetPassword"
+            app:destination="@id/frgResetPassword" />
+    </fragment>
     <fragment
         android:id="@+id/frgResetPassword"
         android:name="com.hygeia.fragments.FrgResetPassword"
