--- a/app/src/main/res/layout/act_request_money.xml
+++ b/app/src/main/res/layout/act_request_money.xml
@@ -40,7 +40,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblDescription"
-        app:prefixText="₱"
+        app:prefixText="H"
         app:helperText="">
 
         <com.google.android.material.textfield.TextInputEditText
