--- a/app/src/main/res/layout/act_send_money.xml
+++ b/app/src/main/res/layout/act_send_money.xml
@@ -63,7 +63,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtLayoutPhoneNumber"
-        app:prefixText="₱"
+        app:prefixText="H"
         app:helperText="">
 
         <com.google.android.material.textfield.TextInputEditText
